<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealEstateSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_label">Search Your Property Here</string>
    <string name="address">Address*:</string>
    <string name="city">City*:</string>
    <string name="state">State*:</string>
    <string name="submit">Submit</string>
    <string name="address_placeholder">Street Address</string>
    <string name="city_placeholder">City</string>
    <string name="zillowimg">Zillow Logo</string>

    <string-array name="states">
        <item>Choose State</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="invalidaddr"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
