<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.realestatesearch.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_label"
        android:textSize="@dimen/abc_text_size_large_material" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/view1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/address_placeholder"
        android:textSize="@dimen/abc_text_size_small_material" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="14dp"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/view1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/city_placeholder"
        android:textSize="@dimen/abc_text_size_small_material" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="14dp"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/spinner1"
        android:layout_below="@+id/textView4"
        android:minWidth="@dimen/abc_dropdownitem_text_padding_left" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignStart="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="16dp"
        android:onClick="validate"
        android:text="@string/submit" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/view1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_alignTop="@+id/button1"
        android:layout_gravity="end"
        android:contentDescription="@string/zillowimg"
        android:onClick="zillowpage"
        android:src="@drawable/zillowlogo" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_alignStart="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="44dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/matchnotfound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:text="@string/invalidaddr" />

</RelativeLayout>